--- a/assets/styles/_breakpoints.scss
+++ b/assets/styles/_breakpoints.scss
@@ -14,24 +14,24 @@ $breakpoints: (
   }
 }
 
-// Container helper - wider for Moonkie style
+// Container helper - matches header width
 .container {
   width: 100%;
   margin-inline: auto;
   padding-inline: 16px;
 
   @include up(md) {
-    max-width: 960px;
+    max-width: 1104px;
     padding-inline: 20px;
   }
 
   @include up(lg) {
-    max-width: 1280px;
+    max-width: 1472px;
     padding-inline: 24px;
   }
 
   @include up(xl) {
-    max-width: 1440px;
+    max-width: 1656px;
     padding-inline: 32px;
   }
 }
