--- a/assets/styles/_utils.scss
+++ b/assets/styles/_utils.scss
@@ -1,21 +1,21 @@
 @use './_breakpoints.scss' as *;
 
-// Container mixin that can be used anywhere
+// Container mixin that can be used anywhere - matches header width
 @mixin container {
   width: 100%;
   margin-inline: auto;
   padding-inline: 16px;
 
   @include up(md) { 
-    max-width: 960px; 
+    max-width: 1104px; 
     padding-inline: 20px; 
   }
   @include up(lg) { 
-    max-width: 1280px; 
+    max-width: 1472px; 
     padding-inline: 24px; 
   }
   @include up(xl) { 
-    max-width: 1440px; 
+    max-width: 1656px; 
     padding-inline: 32px; 
   }
 }
